# trait-bound-pretty

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  parser.lalrpop  parser_tests.rs  parser_trait.rs
