[package]
name = "trait-bound-pretty"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
lalrpop-util = "0.19.1"
regex = "1"
rstest = "0.6.4"

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }
